# robotic_arm

./: .gitignore  README.md
src/: digest.txt
src/piper_description/: CMakeLists.txt  package.xml
src/piper_description/launch/: display.launch.py  gazebo.launch.py
src/piper_description/rviz/: piper.rviz
src/piper_description/urdf/: piper_description.urdf
src/piper_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/piper_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  piper.ros2_control.xacro  piper.srdf  piper.urdf.xacro  ros2_controller.yaml  ros2_controllers.yaml
src/piper_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/piper_moveit_config/scripts/: move_arm.py
src/piper_task/: package.xml  setup.cfg  setup.py
src/piper_task/meshes/: container.stl
src/piper_task/models/: container.sdf  pan.sdf
src/piper_task/piper_task/: add_objects.py  move_arm.py
src/piper_task/scripts/: add_objects.py
