<?xml version="1.0"?>
<package format="3">
  <name>piper_description</name>
  <version>1.0.0</version>
  <description>Piper robot description for ROS2</description>

  <maintainer email="you@email.com">you</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>rviz2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

